CHANGES IN FLTK 1.1.7

	- Documentation fixes (STR #571, STR #648, STR #692, STR
	  #730, STR #744, STR #745, STR #931, STR #942, STR #960,
	  STR #969)
	- The threads demo would display negative prime numbers
	  on MacOS X; this appears to be a MacOS X bug, but we
	  added a workaround to "fix" this (STR #1138)
	- Fl::dnd() now sets the content type of the drag to
	  "text/uri-list" when it sees the dragged text is
	  composed of URIs.
	- Fixed keyboard shortcut handling in FLUID and shortcut
	  labeling in FLTK (STR #1129)
	- Fixed include path for CMake build (STR #1123)
	- Fixed unnecessary delay in WIN32 event handling 
	  (STR #1104)
	- Fixed handling of Ctrl-C in Fl_Text_Display (STR #1122)
	- OS X Quartz version now draw a nice resize control (STR
	  #1099)
	- FLTK now enables large file support when available (STR
	  #1087)
	- Fl_Clock_Output depended on a time value that was the
	  same as an unsigned long, which is incorrect for WIN64
	  and VC++ 2005 (STR #1079)
	- Fl_Text_Display::wrap_mode() would crash if no buffer
	  was associated with the widget (STR #1069)
	- Updated the default label and text colors of all widgets
	  to use FL_FOREGROUND_COLOR instead of FL_BLACK (STR
	  #1052)
	- Fl::set_fonts() now works with Xft (STR #1012)
	- Fl_Value_Input now uses the screen-absolute position
	  instead of the window-relative position when dragging
	  the value; this avoids some jumping conditions (STR
	  #1037)
	- Menus now pop up fully inside the screen if possible
	  (STR #973)
	- Fixed illegal access in Preferences (STR #1025)
	- Fixed x-offset problem in Help_Widget (STR #998)
	- Clipboard will persist if owner window is hidden (STR
	  #1019)
	- Fixed handling of Win32 Device Contexts (STR #1007)
	- Fixed C++ style comments in C files (STR #997)
	- Fixed signedness of scanf() argument (STR #996)
	- Fixed cross-compiling problem (STR #995).
	- FLUID now knows if a static callback is already
	  declared in a class and won't declare it 'extern' (STR